# leed-ll97-report

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: data_dictionary.md  methodology.md  qa_checklist.md
notebooks/: matching_review.ipynb
report_templates/: annual_report_template.md
scripts/: 00_config.py  01_get_leed.py  02_get_nyc_energy_grades.py  03_get_nyc_benchmarking.py  04_get_nyc_ll97.py  05_clean_normalize.py  06_match_buildings.py  07_compute_metrics.py  08_make_charts.py  09_generate_report_md.py  10_run_all.py  scripts_helpers.py
src/leed_ll97_report/: __init__.py  charts.py  io.py  matching.py  metrics.py  normalize.py  report.py
viewer/: data.csv  index.html
