[project]
name = "leed-ll97-report"
version = "0.1.0"
description = "Annual pipeline comparing LEED certified NYC buildings to NYC Energy Grades and LL97 emissions data"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.1,<3",
    "numpy>=1.26,<2",
    "requests>=2.31,<3",
    "rapidfuzz>=3.5,<4",
    "usaddress>=0.5.10,<1",
    "matplotlib>=3.8,<4",
    "openpyxl>=3.1,<4",
    "python-dotenv>=1.0,<2",
    "tabulate>=0.9,<1",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0",
    "ipykernel>=6.27",
    "pytest>=7.4",
    "ruff>=0.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.ruff]
line-length = 100
target-version = "py311"
